@@ -29,8 +29,8 @@ dependencies {
     compile 'jaxen:jaxen:1.2.0'
     compile 'log4j:log4j:1.2.17'
     compile 'org.apache.httpcomponents:httpclient:4.5.11'
-    compile 'org.springframework:spring-beans:5.2.2.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.2.2.RELEASE'
+    compile 'org.springframework:spring-beans:5.2.3.RELEASE'
+    compile 'org.springframework:spring-jdbc:5.2.3.RELEASE'
     compile 'com.oracle:ojdbc6:11.2.0.4.0-atlassian-hosted'
     compile 'com.io7m.xom:xom:1.2.10'
 
