@@ -1,3 +1,6 @@
+Jan 23, 2020
+  added support for new species Naked Mole-Rat
+
 Jan 22, 2020
   added support for new species Vervet (green monkey)
 
